<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@id/buttonSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_settings_24" />

    <TextView
        android:id="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSettings"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="7dp"
        android:orientation="vertical">

        <Button
            android:id="@id/buttonWebCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:text="@string/web_checkout"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@id/buttonTokenization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/tokenization"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <Button
                android:id="@id/buttonNonTokenization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/non_tokenization"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsLayout"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@id/dividerLine1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/teal_700"
                android:outlineProvider="bounds" />

            <androidx.cardview.widget.CardView
                android:id="@id/bodyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <include layout="@layout/card_layout" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@id/dividerLine2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/bodyCard"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/teal_700"
                android:outlineProvider="bounds" />

            <androidx.cardview.widget.CardView
                android:id="@id/payoutStatusCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dividerLine2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@id/tvPaymentStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/payout_status"
                        android:textColor="@color/teal_700"
                        android:textIsSelectable="true"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@id/tvPaymentStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/payout_status"
                        android:lines="15"
                        android:padding="5dp"
                        android:scrollbars="vertical"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="11sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:background="@color/teal_700" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>